k8s/Service1.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8080
